# mcp_gw

./: README.md
kong_gw/: docker-compose.yml  kong.yml  readme.md
mcp_components/: README.md  container_test.py  jira_server.py  mcp_proxy.py  pyproject.toml  server.py  start.sh  test_headers.py  test_jira_mcp.py  test_jira_thru_kong.py  test_kong_mcp.py  test_simple.py
mcp_components/jira_container/: dockerfile  jira_server_langsmith.py  requirements.txt
mcp_components/jira_container/shared/: tracing_utils.py
ms_auth/: get_token_and_call.py  main.py  pyproject.toml
teams_bot/: bot.py  brain_chat.py  chat_ui.py  emulator_bot.py  install_grok.sh  main.py  pyproject.toml  readme.md  streamlit_chat_ui.py
