[project]
name = "teams-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.3",
    "botbuilder-core>=4.17.1",
    "botbuilder-schema>=4.17.1",
    "fastapi>=0.135.1",
    "httpx>=0.28.1",
    "requests>=2.32.5",
    "streamlit>=1.55.0",
    "uvicorn>=0.41.0",
]
